:lipstick:  Fix second figcaption jumping around

--- a/style/index.css
+++ b/style/index.css
@@ -67,6 +67,11 @@ figure img{
   min-width: 50%;
 }
 
+figure >figcaption:nth-last-of-type(1) {
+  width: 110px;
+  text-align: center;
+}
+
 footer{
   width: 200px;
   position: fixed;
